==============
lxml changelog
==============

Under development
==================

Features added
--------------

* The methods ``apply_templates()`` and ``process_children()`` of XSLT
  extension elements have gained two new boolean options ``elements_only``
  and ``remove_blank_text`` that discard either all strings or whitespace-only
  strings from the result list.

Bugs fixed
----------

* Instantiating and using subtypes of Comments and ProcessingInstructions
  crashed.

Other changes
-------------


3.2.0 (2013-04-28)
==================

Features added
--------------

Bugs fixed
----------

* LP#690319: Leading whitespace could change the behaviour of the string
  parsing functions in ``lxml.html``.

* LP#599318: The string parsing functions in ``lxml.html`` are more robust
  in the face of uncommon HTML content like framesets or missing body tags.
  Patch by Stefan Seelmann.

* LP#712941: I/O errors while trying to access files with paths that contain
  non-ASCII characters could raise ``UnicodeDecodeError`` instead of properly
  reporting the ``IOError``.

* LP#673205: Parsing from in-memory strings disabled network access in the
  default parser and made subsequent attempts to parse from a URL fail.

* LP#971754: lxml.html.clean appends 'nofollow' to 'rel' attributes instead
  of overwriting the current value.

* LP#715687: lxml.html.clean no longer discards scripts that are explicitly
  allowed by the user provided whitelist.  Patch by Christine Koppelt.

Other changes
-------------


3.1.2 (2013-04-12)
==================

Features added
--------------

Bugs fixed
----------

* LP#1136509: Passing attributes through the namespace-unaware API of
  the sax bridge (i.e. the ``handler.startElement()`` method) failed
  with a ``TypeError``.  Patch by Mike Bayer.

* LP#1123074: Fix serialisation error in XSLT output when converting
  the result tree to a Unicode string.

* GH#105: Replace illegal usage of ``xmlBufLength()`` in libxml2 2.9.0